fixed spacing in trust by section

--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -88,7 +88,7 @@
 
   #trusted-by {
     text-align: center;
-    margin: 15rem 0;
+    margin: 15rem auto;
     max-width: 120rem;
     padding: 0 4rem;
 
